# RAG-QA

./: app.py  pyproject.toml  requirements.txt  test.ipynb
db/: chroma.sqlite3
db/006bb2bdf3cb5dc9aa7c9ba1e9779a47/: chroma.sqlite3
db/18e1b007a1dab45b30cc861ba2dfda25/: chroma.sqlite3
db/21261ef4362f15179d68070d674b06c1/: chroma.sqlite3
db/31449140993c4869bbbd61feb5dd3e72/: chroma.sqlite3
db/c41ac663add2aa4408f9b01bfe47df89/: chroma.sqlite3
db/c94bc8b53d8097e7266a0c37f033b854/: chroma.sqlite3
db/d8d735fd8dd0a3d5666b220369ea4d8f/: chroma.sqlite3
rag_pipeline/: embedding.py  loader.py  memory.py  prompt.py  qa_chain.py  retriever.py  splitter.py  vectorstore.py
