[project]
name = "rag-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "chromadb==0.4.24",
    "langchain==0.1.20",
    "langchain-community==0.0.38",
    "pypdf",
    "sentence-transformers",
    "streamlit",
]
